--- a/src/components/Homepage/_homepage.scss
+++ b/src/components/Homepage/_homepage.scss
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 3em;
-    color: $text-color;
+    color: white;
     background-color: $primary-color;
 
     h1 {
@@ -42,6 +42,9 @@
 
     label {
       margin: 0.5em 0;
+      input {
+        margin: 0 0.3em;
+      }
     }
   }
   &__submit {
