--- a/src/components/Homepage/_homepage.scss
+++ b/src/components/Homepage/_homepage.scss
@@ -2,7 +2,6 @@
 
 .homepage {
   width: 100%;
-  background-color: $middle-color;
 
   &__title {
     width: 100%;
@@ -21,9 +20,14 @@
   &__survey {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 3em 0;
+    background-color: $background-color;
 
     h2 {
+      color: $primary-color;
       font-size: 2em;
       margin-bottom: 1em;
     }
@@ -32,6 +36,13 @@
   &__form {
     display: flex;
     justify-content: center;
+
+    width: 45em;
+    font-size: 1.1em;
+    padding: 0.5em;
+    border: 3px solid $secondary-color;
+    border-radius: 1em;
+    background-color: $middle-color;
 
     div {
       margin: 0 1em;
